# pong

./: .gitignore  .releaserc  AGENT_SCRATCHPAD.md  CHANGELOG.md  Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: build.yml
assets/: pong-demo.avif
src/: main.rs  main.zig  regions.rs  regions.zig  render.zig  stats.rs  stats.zig  ui.rs
