[package]
name = "pong"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arraydeque = "0.5.1"
crossterm = "0.28.1"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
], default-features = false }
statrs = "0.18.0"
tokio = { version = "1", features = ["full"] }
